# guacamole-server

./: .gitignore  Makefile.am  configure.ac
src/common/: surface.c
src/common-ssh/: key.c  ssh.c  tunnel.c
src/common-ssh/common-ssh/: key.h
src/guacd/: daemon.c  proc-map.h
src/libguac/: client.c  protocol.c  user-handlers.c  user.c
src/libguac/guacamole/: client.h  protocol-constants.h  protocol-types.h  protocol.h  user.h
src/protocols/ball/: Makefile.am  ball.c  ball.h
src/protocols/rdp/: Makefile.am  client.c  rdp.c  rdp.h  settings.c  settings.h  upload.c
src/protocols/rdp/channels/: rail.c  rdpuri.c  rdpuri.h
src/protocols/rdp/channels/rdpsnd/: rdpsnd.c  (+1 more)
src/protocols/spice/: Makefile.am  argv.c  argv.h  auth.h  client.c  client.h  decompose.h  input.h  keyboard.c  keyboard.h  keymap.h  log.h  settings.c  settings.h  spice-constants.h  spice-defaults.h  spice.c  spice.h  user.c
src/protocols/spice/channels/: audio.c  audio.h  clipboard.c  clipboard.h  cursor.c  cursor.h  display.c  display.h  file-download.c  file-download.h  file-upload.c  file.c  file.h
src/protocols/ssh/: client.c  settings.c  settings.h  ssh.c
src/protocols/telnet/: client.c  settings.c  settings.h  telnet.c
src/protocols/tn5250/: Makefile.am  argv.c  argv.h  client.c  client.h  clipboard.c  clipboard.h  input.c  input.h  pipe.c  pipe.h  settings.c  settings.h  sna.h  tn5250.c  tn5250.h  user.c  user.h
src/protocols/tn5250/lib5250/: lib5250.c  lib5250.h
src/protocols/vnc/: client.c  display.c  settings.c  settings.h  vnc.c
src/terminal/terminal/: terminal.h
(+3 files in other folders)
